bullet points, spacing fixes

--- a/css/inner.scss
+++ b/css/inner.scss
@@ -137,6 +137,9 @@
   }
   p, ol, ul {
     margin-bottom: 30px;
+    p {
+      display: inline;
+    }
   }
   hr {
     margin-top: 55px;
@@ -150,10 +153,10 @@
     padding-left: 30px;
     padding-right: 0;
     list-style-type: none;
-    li {
+    > li {
       counter-increment: step-counter;
     }
-    li::before {
+    > li::before {
       content: counter(step-counter) '';
       font-weight: bold;
       font-size: 18px;
@@ -162,6 +165,11 @@
       display: inline-block;
       margin-right: 8px;
       margin-left: -30px;
+    }
+    ul {
+      margin-top: 30px;
+      list-style-type: disc;
+      padding-left: 22px;
     }
   }
 
@@ -183,11 +191,15 @@
     margin: 30px 0;
   }
 
+  .highlight {
+    margin: 30px 0;
+  }
+
   blockquote {
     background: #FFFFFF;
     box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.3);
     padding: 30px;
-    margin: 30px 0;
+    margin: 60px 0;
     border-left: 5px solid #1cadce;
     h5 {
       font-size: 13px;
@@ -197,42 +209,49 @@
       font-size: 13px;
     }
   }
-
-  table > tbody {
-    > tr > td {
-      border-top: 1px solid #c7d4e4;
-      padding: 30px 15px;
-      &:first-child {
-        text-align: right;
-        white-space: nowrap;
-        //padding-right: 30px;
+  table {
+    font-size: 13px;
+    margin: 30px 0;
+    > tbody {
+      > tr > td {
+        border-top: 1px solid #c7d4e4;
+        padding: 15px;
+        border-left: 1px solid #f5f5f5;
+        &:first-child {
+          border-left: none;
+          text-align: right;
+          white-space: nowrap;
+          //padding-right: 30px;
+        }
+      }
+      > tr:nth-child(odd) {
+        //background-color: #eeeeee;
+      }
+      > tr:nth-child(even) {
+        //background-color: #fafafa;
+      }
+      > tr:last-child td {
+        border-bottom: 1px solid #c7d4e4;
       }
     }
-    > tr:nth-child(odd) {
-      //background-color: #eeeeee;
-    }
-    > tr:nth-child(even) {
-      //background-color: #fafafa;
-    }
-    > tr:last-child td {
-      border-bottom: 1px solid #c7d4e4;
-    }
-  }
 
-  table > thead {
-    > tr th {
-      background-color: #c7d4e4;
-      font-weight: bold;
-      padding: 15px;
-      text-transform: uppercase;
-      border-top: none;
-      border-bottom: 1px solid #c7d4e4;
-      border-radius: 0 2px 0 0;
-      &:first-child {
-        text-align: right;
-        white-space: nowrap;
-        //padding-right: 30px;
-        border-radius: 2px 0 0 0;
+    > thead {
+      > tr th {
+        background-color: #c7d4e4;
+        font-weight: bold;
+        padding: 15px;
+        text-transform: uppercase;
+        border-top: none;
+        border-bottom: 1px solid #c7d4e4;
+        border-radius: 0 2px 0 0;
+        border-left: 1px solid #d8e1ed;
+        &:first-child {
+          border-left: none;
+          text-align: right;
+          white-space: nowrap;
+          //padding-right: 30px;
+          border-radius: 2px 0 0 0;
+        }
       }
     }
   }
@@ -251,7 +270,7 @@
       &::before {
         background-color: #eeeeee;
       }
-      ol li::before {
+      ol > li::before {
         background-color: #eeeeee;
       }
     }
