--- a/css/toc.scss
+++ b/css/toc.scss
@@ -10,8 +10,8 @@
   margin-bottom: 25px;
 }
 
-.toc-number, .toc-list {
-  margin-bottom: 30px;
+.inner__content .toc-number, .toc-list {
+  margin-bottom: 60px;
 }
 .toc-list li {
   display: block;
